fix profile text overflow, add footer <p>

--- a/blocks/footer.css
+++ b/blocks/footer.css
@@ -1,24 +1,34 @@
 .footer {
-  font-weight: 400;
-  font-size: 18px;
-  line-height: 1.21;
-  color: #545454;
   max-width: 880px;
   margin: 0 auto;
   padding-bottom: 60px;
 }
 
+.footer__copyright {
+  margin: 0;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 1.21;
+  color: #545454;
+}
+
 @media screen and (max-width: 920px) and (min-width: 621px) {
   .footer {
-    font-size: 16px;
     max-width: 598px;
+  }
+
+  .footer__copyright {
+    font-size: 16px;
   }
 }
 
 @media screen and (max-width: 620px) {
   .footer {
-    font-size: 14px;
     width: 282px;
     padding-bottom: 36px;
+  }
+
+  .footer__copyright {
+    font-size: 14px;
   }
 }
