--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -28,6 +28,10 @@
   font-size: 42px;
   line-height: 1.14;
   color: #fff;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
+  max-width: calc(100% - 24px);
 }
 
 .profile__edit-button {
@@ -50,6 +54,10 @@
   font-size: 18px;
   line-height: 1.21;
   color: #fff;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
+  max-width: 100%;
   align-self: flex-end;
 }
 
@@ -82,6 +90,7 @@
 
   .profile__name {
     font-size: 30px;
+    max-width: calc(100% - 21px);
   }
 
   .profile__edit-button {
@@ -117,6 +126,7 @@
     margin: 0 10px 14px 10%;
     font-size: 22px;
     line-height: 1.21;
+    max-width: calc(100% - 18px);
   }
 
   .profile__edit-button {
